force-app/main/default/objects/College__c/fields/Active_Students__c.field-meta.xml
<CustomField>
    <fullName>Active_Students__c</fullName>
    <label>Active Students</label>
    <summaryFilterItems>
        <field>Student__c.Sudent_Active_Status__c</field>
        <operation>notEqual</operation>
        <value>InActive, Suspend</value>
    </summaryFilterItems>
    <summaryForeignKey>Student__c.College__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>