force-app/main/default/objects/College__c/fields/inactive_Students__c.field-meta.xml
<CustomField>
    <fullName>inactive_Students__c</fullName>
    <formula>Total_Students__c  -  Active_Students__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>inactive Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>