force-app/main/default/objects/College__c/fields/Pin_code__c.field-meta.xml
<CustomField>
    <fullName>Pin_code__c</fullName>
    <label>Pin code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>