force-app/main/default/objects/College__c/fields/Total_Classes__c.field-meta.xml
<CustomField>
    <fullName>Total_Classes__c</fullName>
    <label>Total Classes</label>
    <summaryForeignKey>Class__c.College__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>